--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
 		"@fontsource/sarabun": "^4.5.9",
+		"@sveltejs/adapter-static": "^1.0.0-next.42",
 		"cookie": "^0.4.1"
 	}
 }
